--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,8 +18,8 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_InNewProcess
+NewWindowPosition=(X=-1605,Y=150)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -65,7 +65,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -81,11 +81,11 @@ LastExecutedLaunchName=JOEYCOMPUTER
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=315,Y=143)
-MultipleInstancePositions=(X=0,Y=0)
-MultipleInstancePositions=(X=960,Y=0)
-MultipleInstancePositions=(X=0,Y=520)
-MultipleInstancePositions=(X=960,Y=520)
+MultipleInstancePositions=(X=-1605,Y=150)
+MultipleInstancePositions=(X=-2074,Y=232)
+MultipleInstancePositions=(X=-1190,Y=120)
+MultipleInstancePositions=(X=-1549,Y=361)
+MultipleInstancePositions=(X=-1229,Y=498)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -107,11 +107,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/MyMenu/MM_Level/MM_Level
-MRUItem1=/Game/MyWorlds/DefaultWorld
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyMenu/MM_Level/MM_Level
+LastLevel=/Game/MyWorlds/DefaultWorld
 
 [DetailCategories]
 WorldSettings.World=True
@@ -756,9 +756,34 @@ RecastNavMesh.Cooking=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
 AssetManagerSettings.Asset Registry=True
+WalletComponent_C.ComponentTick=True
+WalletComponent_C.Tags=True
+WalletComponent_C.ComponentReplication=True
+WalletComponent_C.Activation=True
+WalletComponent_C.Variable=True
+WalletComponent_C.Cooking=True
+BankComponent_C.ComponentTick=True
+BankComponent_C.Tags=True
+BankComponent_C.ComponentReplication=True
+BankComponent_C.Activation=True
+BankComponent_C.Variable=True
+BankComponent_C.Cooking=True
+RewardComponent_C.ComponentTick=True
+RewardComponent_C.Tags=True
+RewardComponent_C.ComponentReplication=True
+RewardComponent_C.Activation=True
+RewardComponent_C.Variable=True
+RewardComponent_C.Cooking=True
+WalletComponent_C.Default=True
+BankComponent_C.Default=True
+RewardComponent_C.Default=True
+WalletComponent_C.Sockets=True
+WalletComponent_C.Events=True
+RewardComponent_C.Sockets=True
+RewardComponent_C.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowser]
@@ -774,7 +799,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameBlueprints/MyGameMode
+ContentBrowserTab1.SelectedPaths=/Game/MyMonsters
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -790,19 +815,22 @@ LastLogListing=PIE
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem1=/Game/MyMenu/MM_Player/MM_Player
-MRUItem2=/Game/MyMenu/MM_Level/MM_Level
-MRUItem3=/Game/MyWorlds/DefaultWorld
-MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem5=/Game/MyMonsters/MasterMonster
-MRUItem6=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem7=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem8=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem9=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem10=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem11=/Game/MyMonsters/MonsterHealth
-MRUItem12=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem13=/Game/MyGame/MyPlayer/HEALTH
+MRUItem1=/Game/MyMonsters/MasterMonster
+MRUItem2=/Game/MyGame/MyGameComponents/Economy/WalletComponent
+MRUItem3=/Game/MyGame/MyGameComponents/Economy/RewardComponent
+MRUItem4=/Game/MyGame/MyGameComponents/Economy/BankComponent
+MRUItem5=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem6=/Game/MyWorlds/DefaultWorld
+MRUItem7=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem8=/Game/MyMenu/MM_Player/MM_Player
+MRUItem9=/Game/MyMenu/MM_Level/MM_Level
+MRUItem10=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem11=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem12=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
+MRUItem13=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem14=/Game/MyMonsters/MonsterHealth
+MRUItem15=/Game/MyGame/MyPlayer/MonsterHealth
+MRUItem16=/Game/MyGame/MyPlayer/HEALTH
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -817,11 +845,14 @@ MRUItem13=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState=1
 /Game/MyGame/MyPlayer/HealthComponent.HealthComponent=1
 /Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState=1
+/Game/MyGame/MyGameComponents/Economy/WalletComponent.WalletComponent=1
+/Game/MyGame/MyGameComponents/Economy/BankComponent.BankComponent=1
+/Game/MyGame/MyGameComponents/Economy/RewardComponent.RewardComponent=1
 
 [RootWindow]
-ScreenPosition=X=36.000 Y=242.000
+ScreenPosition=X=-1372.000 Y=144.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -837,7 +868,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=F:/Aedion Studio/ProjectZombieGame/Content/MyMenu/MM_Level
+UNR=G:/Aedion Studio/ProjectZombieGame/Content/MyWorlds
 BRUSH=G:/ProjectZombieGame/Content/
 FBX=G:/ProjectZombieGame/Content/
 FBXAnim=G:/ProjectZombieGame/Content/
@@ -1483,8 +1514,8 @@ UATHelper.TimeStamp=2018.09.19-18.57.35
 UATHelper.LastCompileMethod=Unknown
 WorldBrowser.TimeStamp=2018.09.19-18.45.22
 WorldBrowser.LastCompileMethod=Unknown
-PerfCounters.TimeStamp=2018.09.19-18.45.15
-PerfCounters.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2018.09.19-18.57.32
+PerfCounters.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2018.09.19-18.45.17
 SequencerWidgets.LastCompileMethod=Unknown
 
@@ -1599,6 +1630,7 @@ EdGraph.Graph=False
 IntProperty.Variable=True
 GameMapsSettings.DefaultMaps=True
 WidgetComponent.Collision=True
+K2Node_VariableGet.Variable=True
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1608,12 +1640,12 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+Object=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Console.ConsoleKeys\" "
