--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -82,15 +82,13 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=315,Y=143)
-<<<<<<< HEAD
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=960,Y=0)
-=======
 MultipleInstancePositions=(X=315,Y=143)
 MultipleInstancePositions=(X=793,Y=159)
->>>>>>> UpdatedMainMenu
 MultipleInstancePositions=(X=0,Y=520)
 MultipleInstancePositions=(X=960,Y=520)
+None=======
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -116,7 +114,7 @@ MRUItem0=/Game/MyWorlds/DefaultWorld
 MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyMenu/MM_Level/MM_Level
+LastLevel=/Game/MyWorlds/DefaultWorld
 
 [DetailCategories]
 WorldSettings.World=True
@@ -761,7 +759,6 @@ RecastNavMesh.Cooking=True
 AndroidRuntimeSettings.AdvancedBuild=True
 AndroidRuntimeSettings.Project SDK Override=True
 AssetManagerSettings.Asset Registry=True
-<<<<<<< HEAD
 BankActor_C.Tick=True
 BankActor_C.Rendering=True
 BankActor_C.Replication=True
@@ -789,7 +786,8 @@ WalletComponent_C.ComponentTick=True
 WalletComponent_C.Default=True
 PlayerHUD_C.Tick=True
 PlayerHUD_C.HUD=True
-=======
+None=======
+None=======
 MM_MainMenuOLD_C.Layout=True
 MM_MainMenuOLD_C.Appearance=True
 MM_MainMenuOLD_C.Input=True
@@ -832,14 +830,12 @@ Border.Performance=True
 Border.Clipping=True
 Border.Navigation=True
 Border.Events=True
->>>>>>> UpdatedMainMenu
 VerticalBox.Layout=True
 VerticalBox.Behavior=True
 VerticalBox.Render Transform=True
 VerticalBox.Performance=True
 VerticalBox.Clipping=True
 VerticalBox.Navigation=True
-<<<<<<< HEAD
 SimpleHUD_C.Default=True
 SimpleHUD_C.Appearance=True
 SimpleHUD_C.Designer=True
@@ -875,7 +871,6 @@ BankCurrency_C.Clipping=True
 BankCurrency_C.Navigation=True
 BankActor_C.Default=True
 MyGameMode_C.BankSystem=True
-=======
 Spacer.Layout=True
 Spacer.Appearance=True
 Spacer.Behavior=True
@@ -955,11 +950,18 @@ RotatingMovementComponent.ComponentReplication=True
 RotatingMovementComponent.Activation=True
 RotatingMovementComponent.Cooking=True
 RotatingMovementComponent.Events=True
->>>>>>> UpdatedMainMenu
+BankSpawnPoint_C.TransformCommon=True
+BankSpawnPoint_C.Rendering=True
+BankSpawnPoint_C.Input=True
+BankSpawnPoint_C.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
+OpenAssetsAtExit=/Game/MyGame/MyGameComponents/Economy/BankComponent.BankComponent
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -974,11 +976,9 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameActors
-=======
-ContentBrowserTab1.SelectedPaths=/Game,/Game/MyAssets,/Game/MyGame,/Game/MyMenu,/Game/MyMenu/MM_GameMode,/Game/MyMenu/MM_Level,/Game/MyMenu/MM_Player,/Game/MyMenu/MM_Widget,/Game/MyMonsters,/Game/MyWorlds
->>>>>>> UpdatedMainMenu
+ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameBlueprints/MyGameMode
+None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -990,49 +990,29 @@ AssetPropertyPicker.ThumbnailSizeScale=0.357143
 AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=DataValidation
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-<<<<<<< HEAD
-MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem1=/Game/MyGame/MyGameActors/BankActor
-MRUItem2=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem2=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
 MRUItem3=/Game/MyGame/MyGameComponents/Economy/BankComponent
-MRUItem4=/Game/MyGame/MyPlayer/BankCurrency
-MRUItem5=/Game/MyGame/MyPlayer/SimpleHUD
-MRUItem6=/Game/MyGame/MyPlayer/PlayerHUD
-MRUItem7=/Game/MyGame/MyGameComponents/Economy/WalletComponent
-MRUItem8=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem9=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem10=/Game/MyWorlds/DefaultWorld
-MRUItem11=/Game/MyMenu/MM_Player/MM_Player
+MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem5=/Game/MyMenu/MM_Player/MM_Player
+MRUItem6=/Game/MyMenu/MM_Widget/MM_Settings
+MRUItem7=/Game/MyMenu/MM_Widget/Extra/MM_Button
+MRUItem8=/Game/MyMenu/MM_Widget/MM_MainMenu
+MRUItem9=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
+MRUItem10=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem11=/Game/MyMenu/MM_Widget/Extra/MM_ButtonOld
 MRUItem12=/Game/MyMenu/MM_Level/MM_Level
 MRUItem13=/Game/MyMonsters/MasterMonster
 MRUItem14=/Game/MyGame/MyPlayer/HealthComponent
 MRUItem15=/Game/MyGame/MyPlayer/PlayerHealth
 MRUItem16=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-=======
-MRUItem0=/Game/MyMenu/MM_Player/MM_Player
-MRUItem1=/Game/MyMenu/MM_Widget/MM_Settings
-MRUItem2=/Game/MyMenu/MM_Widget/Extra/MM_Button
-MRUItem3=/Game/MyMenu/MM_Widget/MM_MainMenu
-MRUItem4=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
-MRUItem5=/Game/MyMenu/MM_Widget/MM_Multiplayer
-MRUItem6=/Game/MyMenu/MM_Widget/Extra/MM_ButtonOld
-MRUItem7=/Game/MyWorlds/DefaultWorld
-MRUItem8=/Game/MyMenu/MM_Level/MM_Level
-MRUItem9=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem10=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem11=/Game/MyMonsters/MasterMonster
-MRUItem12=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem13=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem14=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem15=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem16=/Game/MyMenu/MM_GameMode/MM_GameMode
->>>>>>> UpdatedMainMenu
-MRUItem17=/Game/MyMonsters/MonsterHealth
-MRUItem18=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem19=/Game/MyGame/MyPlayer/HEALTH
+MRUItem17=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem18=/Game/MyMonsters/MonsterHealth
+MRUItem19=/Game/MyGame/MyPlayer/MonsterHealth
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1047,24 +1027,22 @@ MRUItem19=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState=1
 /Game/MyGame/MyPlayer/HealthComponent.HealthComponent=1
 /Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState=1
-<<<<<<< HEAD
 /Game/MyGame/MyGameComponents/Economy/BankComponent.BankComponent=1
 /Game/MyGame/MyGameComponents/Economy/WalletComponent.WalletComponent=1
 /Game/MyGame/MyPlayer/PlayerHUD.PlayerHUD=1
 /Game/MyGame/MyPlayer/SimpleHUD.SimpleHUD=1
 /Game/MyGame/MyGameActors/BankActor.BankActor=1
 /Game/MyGame/MyPlayer/BankCurrency.BankCurrency=1
-=======
+None=======
 /Game/MyMenu/MM_Widget/MM_WidgetSwitcher.MM_WidgetSwitcher=1
 /Game/MyMenu/MM_Widget/MM_MainMenu.MM_MainMenu=1
 /Game/MyMenu/MM_Widget/Extra/MM_Button.MM_Button=1
 /Game/MyMenu/MM_Widget/Extra/MM_ButtonOld.MM_ButtonOld=1
->>>>>>> UpdatedMainMenu
 
 [RootWindow]
 ScreenPosition=X=441.000 Y=154.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1857,23 +1835,21 @@ TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
 Object=
-<<<<<<< HEAD
 StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-=======
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent=
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+PrimitiveComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+SceneComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 ActorComponent=
+ActorComponent=
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
->>>>>>> UpdatedMainMenu
+None=======
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Console.ConsoleKeys\" "
 MyPlayer_C=
 Character=
